[package]
name = "tension_field"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
toybox = { git = "https://github.com/PORTALSURFER/toybox" }

[target.'cfg(target_os = "windows")'.dependencies]
toybox = { git = "https://github.com/PORTALSURFER/toybox", features = ["gui"] }

[build-dependencies]
toybox = { git = "https://github.com/PORTALSURFER/toybox" }
